Update old and write missing documentation and examples.